Subiendo código al nuevo repositorio

--- a/src/app/component/knino-name/knino-name.component.html
+++ b/src/app/component/knino-name/knino-name.component.html
@@ -1,3 +1,4 @@
 <div class="knino-content">
   <img src="assets/img/knino_logos.png" alt="Logo" class="logo">
+  <span>{{ KninoName }}</span> <!-- Aquí se mostrará el valor de KninoName -->
 </div>
